# cloniphy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.bak  Makefile.rules  README.md  TODO.txt  config.60Mb.cesga.yml  config.min.cesga.yml  config.min.yml  config.yml  contributors.txt  doxygen.conf
include/seqan/stream/: iostream_zutil.h
lib/: libyaml-cpp.so.0.6.2
resources/: trinuc_freqs.hs37d5.csv
scripts/: alignment_sumstats.py  build.cesga.sh  bulk.postproc.sh  bulk_postprocessing.sh  cn.plot.R  generate_bulk_data.sh  genome_stats.ipynb  mm_to_snv.awk  newick_to_adjacency_list.py  nexus_to_adjacency_list.py  nuc_count.awk  prev_to_csv.awk  run_cloniphy.slurm.sh  run_tgs.cesga.sh  trinuc_freqs.py
src/: CMakeLists.txt  basicclonetree.cpp  basicclonetree.hpp  clone.cpp  clone.hpp  clonetree.cpp  clonetree.hpp  cloniphy.cpp  coalescencetree.cpp  coalescencetree.hpp  coalescentclonetree.cpp  coalescentclonetree.hpp  evolution.cpp  evolution.hpp  main.cpp  matrix.cpp  node.cpp  node.hpp  random.hpp  seqio.cpp  seqio.hpp  simpleclonetree.cpp  simpleclonetree.hpp  stringio.hpp  tree.cpp  tree.hpp  treeio.cpp  treeio.hpp  vario.cpp  vario.hpp
src/core/: CMakeLists.txt  amp.cpp  amp.hpp  bamio.cpp  bamio.hpp  basicclonetree.cpp  basicclonetree.hpp  clone.cpp  clone.hpp  clonetree.cpp  clonetree.hpp  coalescentclonetree.cpp  coalescentclonetree.hpp  evolution.cpp  evolution.hpp  matrix.cpp  matrix.hpp  random.hpp  seqio.cpp  seqio.hpp  sequence.hpp  stringio.cpp  stringio.hpp  treeio.cpp  treeio.hpp  vario.cpp  vario.hpp
src/core/bamio/: BulkSample.cpp  BulkSample.hpp  BulkSampleGenerator.cpp  BulkSampleGenerator.hpp
src/core/config/: ConfigStore.cpp  ConfigStore.hpp
src/core/model/: DataFrame.hpp
src/core/seqio/: AlleleSpecCopyNum.cpp  AlleleSpecCopyNum.hpp  BedFile.cpp  BedFile.hpp  ChromosomeInstance.cpp  ChromosomeInstance.hpp  ChromosomeReference.cpp  ChromosomeReference.hpp  FastaIndex.cpp  FastaIndex.hpp  GenomeInstance.cpp  GenomeInstance.hpp  GenomeReference.cpp  GenomeReference.hpp  KmerProfile.cpp  KmerProfile.hpp  Locus.cpp  Locus.hpp  SegmentCopy.cpp  SegmentCopy.hpp  SeqRecord.cpp  SeqRecord.hpp  types.hpp
src/core/treeio/: Tree.cpp  Tree.hpp  TreeNode.cpp  TreeNode.hpp  parse.cpp  parse.hpp
src/core/vario/: CopyNumberVariant.cpp  CopyNumberVariant.hpp  Variant.cpp  Variant.hpp  VariantSet.cpp  VariantSet.hpp  VariantStore.cpp  VariantStore.hpp
src/test/: CMakeLists.txt  test_amp.cpp  test_bamio.cpp  test_interface.cpp  test_master.cpp  test_random.cpp  test_seqio.cpp  test_treeio.cpp  test_vario.cpp
tests/: Makefile  test_seqio.cpp  test_vario.cpp
